test/ui/test/packages/unsupported-component-types/package.metadata
# TEST fail check

name: future,
version: "99.99.999",

components: {
    yi: {
        type: "example",
        path: "examples/first.lushui",
    },
    er: {
        type: test-suite,
        path: "tests/first.lushui",
    },
    san: {
        type: "benchmark-suite",
        path: "benchmarks/first.lushui",
    },
},
